--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ footer {
 }
 
 #chat-mensajes {
-    height: 300px;
+    height: 60%;
     border: 1px solid gray;
     border-radius: 5px;
     overflow-y: scroll;
